--- a/tampilan/login.html
+++ b/tampilan/login.html
@@ -45,8 +45,8 @@
             <div class="form-container sign-in-container">
               <form action="../Controller/login.php" method="post">
                 <h1>Login Your Account</h1>
-                <input type="text" placeholder="username / email" name="name"/>
-                <input type="password" placeholder="Password" name="pass" />
+                <input type="text" placeholder="username / email" name="name" required/>
+                <input type="password" placeholder="Password" name="pass" required />
                 <a href="registrasi.html">Does not have account?</a>
                 <button class="submit" name="login">Sign In</button>
               </form>
