--- a/tampilan/registrasi.html
+++ b/tampilan/registrasi.html
@@ -41,25 +41,20 @@
         </head>
         <body>
           <div class="container" id="container">
-            <div class="form-container sign-up-container">
-              <form action="#">
-                <h1>Create Account</h1>
-
-                <span>or use your email for registration</span>
-                <input type="text" placeholder="Name" />
-                <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
-                <input type="number" placeholder="Nomor HP"/>
-                <button>Sign Up</button>
-              </form>
-            </div>
             <div class="form-container sign-in-container">
-              <form action="../Controller/register.php">
+              <form action="../Controller/register.php" method="POST">
                 <h1>Join Tempest</h1>
-                <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
+                <input type="text" name="name" placeholder="Name" required/>
+                <input type="text" name="username" placeholder="Username" required/>
+                <input type="email" name="email" placeholder="Email" required/>
+                <input type="password" placeholder="Password" name="password" required/>
+                <input type="tel" name="notelp" placeholder="Nomor Telfon" required/>
+                <select  name="role" required>
+                  <option value="customer">Customer</option>
+                  <option value="booster">booster</option>
+                </select>
                 <a href="login.html">Already a member</a>
-                <button>Create Account</button>
+                <button class="submit" name="registrasi">Create Account</button>
               </form>
             </div>
             <div class="overlay-container">
